examples/test/testpolicy1709.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1709
  namespace: namespace179
spec:
  podSelector:
    matchLabels:
      key17: value9
      key5: value11
      key43: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value36
      podSelector:
        matchLabels:
          key24: value31
          key15: value43
